<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AVR Event Recorder Communicator</string>
    <string name="title_activity_device_watch">AVR Event Recorder Watchout</string>
    <string name="device_status_placeholder">-- AVR Device Placeholder --</string>
    <string name="device_data_placeholder">-- AVR Device Data Placeholder --</string>

    <!-- General Menu -->
    <string name="menu_settings">Preferences</string>
    <string name="menu_help">Help</string>

    <!-- Home Screen -->
    <string name="home_new_session">Start New Session</string>
    <string name="home_upload_data">Upload Records from Device</string>
    <string name="home_view_sessions">View Sessions</string>
    <string name="home_recorded_session">Recorded Session</string>
    <string name="home_recorded_sessions">Recorded Sessions</string>
    <string name="home_recorded_hour">Hour</string>
    <string name="home_recorded_hours">Hours</string>
    <string name="home_recorded_minute">Minutes</string>
    <string name="home_recorded_minutes">Minutes</string>
    <string name="home_recorded_seconds">Seconds</string>
    <string name="home_recorded_events_only">Recorded Events</string>
    <string name="home_recorded_events"> of Recorded Events</string>
    <string name="home_recorded_last">LAST SESSION</string>
    <string name="home_device_attached">Compatible device is attached.</string>
    <string name="home_device_detached">No compatible devices attached.</string>

    <!-- Records Status -->
    <string name="device_reading_completed">Reading completed.</string>
    <string name="device_session">session</string>
    <string name="device_records">records</string>

    <!-- Records Table -->
    <string name="records_table_title">Recorded Events</string>
    <string name="records_table_column_index">Index</string>
    <string name="records_table_column_entry">Entry</string>
    <string name="records_table_column_switch_id">Trigger</string>
    <string name="records_table_column_timestamp">Timestamp</string>

    <!-- Records Options -->
    <string name="records_options_save">Save</string>
    <string name="records_options_share">Share</string>
    <string name="records_options_share_with">Share with . . .</string>
    <string name="records_options_re_init">Re-Init</string>
    <string name="title_activity_home_screen">Event Recorder</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_session_list">Sessions</string>
    <string name="title_session_detail">Session Detail</string>
    <string name="title_activity_event_recorder_new_session">EventRecorderNewSessionActivity</string>

    <!-- Session Details -->
    <string name="session_details_saved">Session saved!</string>
    <string name="session_details_not_saved">Session is not saved!</string>
    
    <!-- New Session -->
    <string name="new_session_pre_discard_title">Discard session data?</string>
    <string name="new_session_pre_discard_message">Discarding session data is irreversible! All session data will be lost! Press Cancel to return. Otherwise, discard session data by pressing Discard button.</string>
    <string name="new_session_pre_discard_button_text_discard">Discard</string>
    <string name="new_session_pre_discard_button_text_cancel">Cancel</string>
    
    <!-- Edit Session Data -->
    <string name="edit_session_data_title">Edit Session Data</string>
    <string name="edit_session_data_message">Following properties can be updated. When finished, click on Keep Changes to update session data. Otherwise, select Discard.</string>
    <string name="edit_session_data_session_name">Name:</string>
    <string name="edit_session_data_session_description">Description:</string>
    <string name="edit_session_data_session_recorded_on">Recorded on:</string>
    <string name="edit_session_data_session_button_keep_changes">Keep Changes</string>
    <string name="edit_session_data_session_button_discard">Discard</string>
    
    <!-- Device Status Notification -->
    <string name="notification_device_detected_ticker">Compatible device detected</string>
    <string name="notification_device_detected_default_name">Compatible device</string>
    <string name="notification_device_detected_session_description">Read from device at</string>
    <string name="notification_device_detected_content_text_fragment">recorded events.</string> <!-- Example: "15 recorded events." -->
    
    <!-- No Session -->
    <string name="no_session_intro">There are not session data....</string>
    <string name="no_session_button_new">Record new session</string>
    <string name="no_session_button_import">Import recorded events</string>
    <string name="no_session_button_download">Download recorded events from compatible device</string>
    
</resources>
