<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="io.github.vladast.avrcommunicator.activities.HomeScreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!-- <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" /> -->
	<RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" >
           
		<LinearLayout 
		    android:id="@+id/linearLayoutHomeSessionCount"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top|center"
		    android:orientation="horizontal">

			<TextView
			    android:id="@+id/textViewHomeSessionCountValue"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingRight="5dp"
			    android:text="0" />

			<TextView
			    android:id="@+id/textViewHomeSessionCountText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/home_recorded_sessions" />
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/linearLayoutHomeEventTime"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top|center"
		    android:orientation="horizontal"
		    android:layout_below="@id/linearLayoutHomeSessionCount">

			<TextView
			    android:id="@+id/textViewHomeEventTimeValue"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingRight="5dp"
			    android:text="0" />

			<TextView
			    android:id="@+id/textViewHomeEventTimeSecondsText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingRight="5dp"
			    android:text="@string/home_recorded_seconds" />
			
			<TextView
			    android:id="@+id/textViewHomeEventTimeText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/home_recorded_events" />
		    
		</LinearLayout>
            
		<LinearLayout 
		    android:id="@+id/linearLayoutHomeSessionLast"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top|center"
		    android:orientation="vertical"
		    android:layout_below="@id/linearLayoutHomeEventTime">

			<TextView
			    android:id="@+id/textViewHomeSessionLastIntro"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/home_recorded_last" />

			<TextView
			    android:id="@+id/textViewHomeSessionLastText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="Unknown" 
			    android:textStyle="italic"/>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/linearLayoutHomeDevice"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top|center"
		    android:orientation="horizontal"
		    android:layout_below="@id/linearLayoutHomeSessionLast">

			<ImageView 
			    android:id="@+id/imageViewHomeDeviceImage"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/ic_launcher"
			    android:contentDescription="USB device"/>

			<TextView
			    android:id="@+id/textViewHomeDeviceStatus"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:text="@string/home_device_detached" />
		    
		</LinearLayout>
		
	</RelativeLayout>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

  	<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            
	        <Button
	            android:id="@+id/buttonNewSession"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
	            android:text="@string/home_new_session" />
	
	        <Button
	            android:id="@+id/buttonUploadData"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
	            android:text="@string/home_upload_data" />
	
	        <Button
	            android:id="@+id/buttonViewSessions"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
	            android:text="@string/home_view_sessions" />
        </LinearLayout>



    </FrameLayout>

</FrameLayout>
